--- a/Home Page/Countries/Amada'sUK.html
+++ b/Home Page/Countries/Amada'sUK.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="../New folder/Favicon (2).png" type="image/png">
 
   <style>
+    /* GOOGLE FONTS */
     @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Oswald:wght@200..700&display=swap');
 
     body {
@@ -287,6 +288,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../main.html" class="brand">
 
@@ -314,6 +316,7 @@
   <script src="../main.js"></script>
 
 
+  <!-- Video Section -->
   <div class="video-container">
     <video autoplay muted loop>
       <source src="./UKvedio.mp4" type="video/mp4">
@@ -346,12 +349,12 @@
       <div class="place-image" style="background-image:url('./Minack\ Theatre\,\ Cornwall-UK.jpg');"></div>
       <div class="place-info">
         <h3>Minack Theatre, Cornwall</h3>
-        <p>It’s hard to believe this astonishing cliff-edge theatre is in the UK. The Minack looks looks like something
+        <p>It's hard to believe this astonishing cliff-edge theatre is in the UK. The Minack looks looks like something
           from an ancient Greek epic, with the greco-esque structure jutting out from the craggy cliffs over the
           shockingly blue sea. One of the most exciting things about watching a play at the open-air theatre is the
           unpredictability of the weather. Come rain or shine, the show must go on, even if the audience has to get
           soaked to their underpants. Built in 1930, this amphitheatre usually has a dependable summer programme of
-          musicals, Shakespeare and other classics, Cornish tales, kids’ performances, and gigs. Catching a show here is
+          musicals, Shakespeare and other classics, Cornish tales, kids' performances, and gigs. Catching a show here is
           certainly one for the books.</p>
       </div>
     </div>
@@ -360,11 +363,11 @@
       <div class="place-image" style="background-image: url('./Barbican\ Estate\,\ London-UK.jpg');"></div>
       <div class="place-info">
         <h3>Barbican Estate, London</h3>
-        <p>Look, I know it isn’t everyone’s cup of tea. No matter how much I wax lyrical about its towering concrete
-          curves, the Barbican is always going to have its detractors. There are plenty of people who don’t appreciate
-          its peaceful vistas, towering greyness and general atmosphere of faded glamour. But to me, it’s stark, cool,
-          imposing and utterly magnificent. Walking around its silent streets makes me feel like I’m in a Cold War era
-          spy movie. And it doesn’t hurt that it’s also home to one of London’s most celebrated arts venues, complete
+        <p>Look, I know it isn't everyone's cup of tea. No matter how much I wax lyrical about its towering concrete
+          curves, the Barbican is always going to have its detractors. There are plenty of people who don't appreciate
+          its peaceful vistas, towering greyness and general atmosphere of faded glamour. But to me, it's stark, cool,
+          imposing and utterly magnificent. Walking around its silent streets makes me feel like I'm in a Cold War era
+          spy movie. And it doesn't hurt that it's also home to one of London's most celebrated arts venues, complete
           with a stunning verdant conservatory, plush auditoriums, chic martini bar and loads of quiet little nooks for
           working or gossiping in.</p>
       </div>
@@ -374,11 +377,11 @@
       <div class="place-image" style="background-image: url('./Central\ Oxford-uk.jpg');"></div>
       <div class="place-info">
         <h3>Central Oxford</h3>
-        <p>It may be an antiquated, elitist academic institution, but you’ve got to hand it to the University of Oxford:
-          it’s responsible for one of the most beautiful bits of urban landscape in Europe. Even for jaded students, the
+        <p>It may be an antiquated, elitist academic institution, but you've got to hand it to the University of Oxford:
+          it's responsible for one of the most beautiful bits of urban landscape in Europe. Even for jaded students, the
           stretch of central Oxford between Broad Street and the High Street is just jawdropping, its medieval lanes and
           olde-worlde cottages, pubs and bookshops contrasting with the grandiose, honey-coloured stone buildings of
-          high academia. You don’t even have to pay for a single college tour to appreciate the dreaming spires (or
+          high academia. You don't even have to pay for a single college tour to appreciate the dreaming spires (or
           should that be ivory towers?) from the outside.</p>
       </div>
     </div>
@@ -390,7 +393,7 @@
         <p>Got a head for heights? Head to the pretty area of Clifton in Bristol to take in the Georgian architecture
           before heading to see the icon of the city: Clifton Suspension Bridge. Designed by legendary engineer Isambard
           Kingdom Brunel and opened in 1864, the bridge spans the breathtaking Avon Gorge and towers a whopping 75
-          metres above the River Avon, so you can take in views of the city, surrounding countryside – and maybe even a
+          metres above the River Avon, so you can take in views of the city, surrounding countryside - and maybe even a
           hot air balloon or two if you time it right. The visitor centre is free to visit should you want to learn
           more.</p>
       </div>
@@ -400,11 +403,11 @@
       <div class="place-image" style="background-image: url('./Medieval\ Shambles\,\ York-UK.jpg');"></div>
       <div class="place-info">
         <h3>Medieval Shambles, York</h3>
-        <p>Peering down York’s Shambles in 2024, with the road’s overhanging buildings, rustic wooden crossbeams and
-          characterful row of twee shops, you’d have no idea of the road’s grim past. The name ‘Shambles’ literally
+        <p>Peering down York's Shambles in 2024, with the road's overhanging buildings, rustic wooden crossbeams and
+          characterful row of twee shops, you'd have no idea of the road's grim past. The name 'Shambles' literally
           refers to an open-air slaughterhouse, which is what this York street was back in the 1300s. These days all
-          that blood and gore (and the street’s famed butchers, which stuck around until the 1800s) is long gone;
-          leaving one of the UK’s best preserved medieval streets. There are few easier, more atmospheric ways to
+          that blood and gore (and the street's famed butchers, which stuck around until the 1800s) is long gone;
+          leaving one of the UK's best preserved medieval streets. There are few easier, more atmospheric ways to
           transport yourself back hundreds of years (without the iffy smells and sights) than a stroll down Shambles.
         </p>
       </div>
@@ -415,7 +418,7 @@
   <script src="https://elfsightcdn.com/platform.js" async></script>
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
-
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
@@ -499,6 +502,7 @@
   </footer>
 
   <script>
+    // Hide/Show Navigation on Scroll
     document.addEventListener('DOMContentLoaded', function () {
       let lastScroll = 0;
       const header = document.querySelector('header');
