--- a/Home Page/Countries/AmadaCanada.html
+++ b/Home Page/Countries/AmadaCanada.html
@@ -287,6 +287,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../main.html" class="brand">
 
@@ -313,7 +314,7 @@
   <link rel="stylesheet" href="../main.css">
   <script src="../main.js"></script>
 
-
+  <!-- Video Section -->
   <div class="video-container">
     <video autoplay muted loop>
       <source src="./Canadavedio.mp4" type="video/mp4">
@@ -327,10 +328,10 @@
   <div class="about-section">
 
     <p>Canada is a country in North America, stretching from the Atlantic Ocean in the east to the Pacific Ocean in the
-      west and northward into the Arctic Ocean. It is the world’s second-largest country by land area and is known for
+      west and northward into the Arctic Ocean. It is the world's second-largest country by land area and is known for
       its vast forests, mountains, lakes, and multicultural cities. Canada has ten provinces and three territories, with
       Ottawa as its capital and Toronto as the largest city. The country has two official languages, English and French,
-      and a rich Indigenous heritage alongside European cultural influences. Canada’s economy is diverse, including
+      and a rich Indigenous heritage alongside European cultural influences. Canada's economy is diverse, including
       natural resources, technology, manufacturing, and services. Popular attractions include the Rocky Mountains,
       Niagara Falls, Banff National Park, and the northern lights in Yukon and Northwest Territories. Its climate varies
       from temperate on the coasts to subarctic and arctic in the north, attracting tourists year-round for outdoor
@@ -346,7 +347,7 @@
       <div class="place-image" style="background-image:url('./image\ 01\ -\ Toronto-Canada.jpeg');"></div>
       <div class="place-info">
         <h3>Toronto</h3>
-        <p>Toronto, Canada’s largest city, is a vibrant cultural and economic hub. Visitors can explore the CN Tower,
+        <p>Toronto, Canada's largest city, is a vibrant cultural and economic hub. Visitors can explore the CN Tower,
           walk along the Toronto Harbourfront, and enjoy museums like the Royal Ontario Museum and the Art Gallery of
           Ontario. The city has diverse neighborhoods offering shopping, restaurants, and entertainment, including the
           famous Distillery District.</p>
@@ -389,7 +390,7 @@
       <div class="place-image" style="background-image: url('./image\ 05-Niagara\ Falls-Canada.jpeg');"></div>
       <div class="place-info">
         <h3>Niagara Falls</h3>
-        <p>One of Canada’s most famous natural attractions, Niagara Falls straddles the border with the United States.
+        <p>One of Canada's most famous natural attractions, Niagara Falls straddles the border with the United States.
           Tourists can take boat rides to the base of the falls, explore the surrounding parks, or visit nearby towns
           for entertainment, dining, and wine tours in the Niagara region.</p>
       </div>
@@ -484,6 +485,7 @@
   </footer>
 
   <script>
+    // Hide/Show Navigation on Scroll
     document.addEventListener('DOMContentLoaded', function () {
       let lastScroll = 0;
       const header = document.querySelector('header');
