--- a/Home Page/Countries/AmadaNewZealand.html
+++ b/Home Page/Countries/AmadaNewZealand.html
@@ -228,6 +228,7 @@
       text-indent: 30px;
     }
 
+    /* Places Section */
     .places {
       padding: 3rem 2rem;
       background-color: #fffefe;
@@ -287,6 +288,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../main.html" class="brand">
 
@@ -314,6 +316,7 @@
   <script src="../main.js"></script>
 
 
+  <!-- Video Section -->
   <div class="video-container">
     <video autoplay muted loop>
       <source src="./new zeland vedio.webm" type="video/mp4">
@@ -348,8 +351,8 @@
       <div class="place-info">
         <h3>Rotorua</h3>
         <p>On the central North Island, Rotorua is famous for its geothermal features and Maori culture. Travelers short
-          on time can visit on a day trip from Auckland, but it’s a convenient stop when traveling through the North
-          Island. Hell’s Gate, Wai-O-Tapu, or Orakei Korako (on the way to Taupo) are good options for bubbling mud
+          on time can visit on a day trip from Auckland, but it's a convenient stop when traveling through the North
+          Island. Hell's Gate, Wai-O-Tapu, or Orakei Korako (on the way to Taupo) are good options for bubbling mud
           pools, boiling geysers, and colorful rock formations, and many resorts and holiday parks in the area have hot
           spring bathing facilities. You can also learn more about Maori culture at tourist villages like Mitai,
           Whakarewarewa, and Tamaki with their cultural shows of traditional music and dancing and a hangi meal cooked
@@ -387,9 +390,9 @@
       <div class="place-info">
         <h3>Coromandel Peninsula</h3>
         <p>The Coromandel Peninsula reaches 50 miles into the Hauraki Gulf, across the Firth of Thames from Auckland.
-          It’s a microcosm of all that’s good in northern New Zealand—stunning beaches, hiking trails, and arty,
+          It's a microcosm of all that's good in northern New Zealand—stunning beaches, hiking trails, and arty,
           laid-back towns. During low tide at Hot Water Beach, dig a few inches beneath the sand to create your own
-          natural hot spring bath, spend the day at Cathedral Cove, one of New Zealand’s most beautiful beaches (which
+          natural hot spring bath, spend the day at Cathedral Cove, one of New Zealand's most beautiful beaches (which
           is saying something), and hike the Pinnacles Walk or Coromandel Coastal Walkway.</p>
       </div>
     </div>
@@ -411,7 +414,7 @@
   <script src="https://elfsightcdn.com/platform.js" async></script>
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
-
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
@@ -494,7 +497,9 @@
 
   </footer>
 
+
   <script>
+    // Hide/Show Navigation on Scroll
     document.addEventListener('DOMContentLoaded', function () {
       let lastScroll = 0;
       const header = document.querySelector('header');
