--- a/Home Page/Countries/Amadaaustrailia.html
+++ b/Home Page/Countries/Amadaaustrailia.html
@@ -285,6 +285,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../main.html" class="brand">
 
@@ -311,7 +312,7 @@
   <link rel="stylesheet" href="../main.css">
   <script src="../main.js"></script>
 
-
+  <!-- Video Section -->
   <div class="video-container">
     <video autoplay muted loop>
       <source src="./AustraliaMainVedio.mp4" type="video/mp4">
@@ -327,11 +328,11 @@
     <p>
       Australia is famous for its unique wildlife, including kangaroos, koalas, wombats, and emus, many of which are
       native only to the continent. The country has a rich Aboriginal culture, with traditions, art, and languages
-      dating back tens of thousands of years. Australia’s economy is diverse, relying on mining, agriculture, tourism,
+      dating back tens of thousands of years. Australia's economy is diverse, relying on mining, agriculture, tourism,
       and services. Major natural landmarks include the Great Barrier Reef, the Outback, Uluru (Ayers Rock), and the
       Blue Mountains. The country also has vibrant cities with cultural, educational, and sporting attractions, such as
       Melbourne, known for its arts and coffee culture, and Brisbane, a gateway to the Gold Coast and Sunshine Coast.
-      Australia’s climate varies widely, from tropical in the north to temperate in the south, and it attracts millions
+      Australia's climate varies widely, from tropical in the north to temperate in the south, and it attracts millions
       of international visitors each year for its natural beauty, adventure activities, and wildlife experiences.
   </div>
 
@@ -344,7 +345,7 @@
       <div class="place-image" style="background-image:url('./australia-Sydney.jpeg');"></div>
       <div class="place-info">
         <h3>Sydney</h3>
-        <p>Sydney, on the southeastern coast, is Australia’s largest city and a hub of culture, business, and tourism.
+        <p>Sydney, on the southeastern coast, is Australia's largest city and a hub of culture, business, and tourism.
           The Sydney Opera House and Sydney Harbour Bridge are world-famous landmarks. Visitors can take ferry rides
           across the harbour, explore the historic Rocks district, or relax on Bondi and Manly beaches. Sydney also has
           thriving arts and cultural scenes at the Art Gallery of New South Wales, the Museum of Contemporary Art, and
@@ -357,7 +358,7 @@
       <div class="place-image" style="background-image: url('./Australia-GreatBarrierReef.jpeg');"></div>
       <div class="place-info">
         <h3>Great Barrier Reef</h3>
-        <p>The Great Barrier Reef, off the northeast coast in Queensland, is the world’s largest coral reef system and a
+        <p>The Great Barrier Reef, off the northeast coast in Queensland, is the world's largest coral reef system and a
           UNESCO World Heritage Site. Visitors can snorkel, scuba dive, or take glass-bottom boat tours to see colorful
           corals, tropical fish, sea turtles, and manta rays. Towns like Cairns and Port Douglas serve as gateways to
           the reef and nearby tropical rainforests, including the Daintree Rainforest, where guided walks and river
@@ -370,7 +371,7 @@
       <div class="place-info">
         <h3>Uluru (Ayers Rock)</h3>
         <p>In the heart of the Northern Territory, Uluru is a massive red sandstone monolith sacred to the Anangu
-          people. Visitors can walk around the base of Uluru, watch the sunrise or sunset that transforms the rock’s
+          people. Visitors can walk around the base of Uluru, watch the sunrise or sunset that transforms the rock's
           colors, and learn about Aboriginal culture at the Cultural Centre. Nearby, the Kata Tjuta (The Olgas) offer
           dramatic rock formations and hiking trails, including the Valley of the Winds Walk.</p>
       </div>
@@ -380,7 +381,7 @@
       <div class="place-image" style="background-image: url('./Autralia-Melborne.jpeg');"></div>
       <div class="place-info">
         <h3>Melbourne and Surroundings</h3>
-        <p>Melbourne, in Victoria, is famous for its art, music, food, and coffee culture. Explore the city’s laneways
+        <p>Melbourne, in Victoria, is famous for its art, music, food, and coffee culture. Explore the city's laneways
           for street art, boutique shops, and cafés, or enjoy cultural venues like the National Gallery of Victoria and
           the Melbourne Museum. Day trips from Melbourne include the Yarra Valley for wine tasting, the Great Ocean Road
           for scenic coastal drives and the Twelve Apostles, and Phillip Island to see the famous penguin parade.</p>
@@ -391,7 +392,7 @@
       <div class="place-image" style="background-image: url('./Australia-Rainforest.jpeg');"></div>
       <div class="place-info">
         <h3>Daintree Rainforest and Cape Tribulation</h3>
-        <p>The Daintree Rainforest, part of Queensland’s tropical north, is one of the oldest rainforests in the world.
+        <p>The Daintree Rainforest, part of Queensland's tropical north, is one of the oldest rainforests in the world.
           Visitors can hike among ancient trees, spot unique wildlife such as cassowaries, and take river cruises to see
           saltwater crocodiles. Cape Tribulation, where the rainforest meets the reef, offers guided walks, wildlife
           spotting, and cultural experiences with local Aboriginal communities.</p>
@@ -403,7 +404,7 @@
   <script src="https://elfsightcdn.com/platform.js" async></script>
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
-
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
@@ -487,6 +488,7 @@
   </footer>
 
   <script>
+    // Hide/Show Navigation on Scroll
     document.addEventListener('DOMContentLoaded', function () {
       let lastScroll = 0;
       const header = document.querySelector('header');
