--- a/Home Page/Destinations/Packages/ex/Canada3.html
+++ b/Home Page/Destinations/Packages/ex/Canada3.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -45,7 +46,7 @@
 
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img
@@ -56,16 +57,17 @@
     <div class="hero-content container">
       <span class="chip"><i class="ri-sparkling-2-line"></i> Featured Package</span>
       <h1 class="title">CANADA — 3 Days / 2 Nights</h1>
-      <p class="subtitle">Experience Canada’s natural beauty and vibrant cities — Niagara Falls, Toronto, and Ottawa.
+      <p class="subtitle">Experience Canada's natural beauty and vibrant cities — Niagara Falls, Toronto, and Ottawa.
       </p>
 
       <div class="facts">
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>3 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>2 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Toronto • Niagara Falls</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: May – Sep</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: May - Sep</span></div>
       </div>
 
+      <!-- Price and Booking Section -->
       <div class="cta-wrap">
         <a href="../applyForm/Applynow1.html">
           <button class="btn primary" id="enquireBtn">
@@ -73,6 +75,7 @@
           </button>
         </a>
       </div>
+
 
       <aside class="sticky-card">
         <div class="price-row">
@@ -95,6 +98,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -127,6 +131,7 @@
     </div>
   </section>
 
+  
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -179,6 +184,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -228,6 +234,9 @@
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
   <script src="../script.js"></script>
 
+  
+
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
