--- a/Home Page/Destinations/Packages/ex/Canada7.html
+++ b/Home Page/Destinations/Packages/ex/Canada7.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -45,7 +45,7 @@
 
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img
@@ -56,7 +56,7 @@
     <div class="hero-content container">
       <span class="chip"><i class="ri-sparkling-2-line"></i> Featured Package</span>
       <h1 class="title">CANADA — 7 Days / 6 Nights</h1>
-      <p class="subtitle">Discover Canada’s top destinations — Toronto, Niagara Falls, Ottawa, Quebec, Montreal, and
+      <p class="subtitle">Discover Canada's top destinations — Toronto, Niagara Falls, Ottawa, Quebec, Montreal, and
         Vancouver.</p>
 
       <div class="facts">
@@ -64,7 +64,7 @@
         <div class="fact"><i class="ri-moon-clear-line"></i><span>6 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Toronto • Niagara Falls • Ottawa • Quebec • Montreal •
             Vancouver</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: May – Sep</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: May - Sep</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -75,6 +75,7 @@
         </a>
       </div>
 
+      <!-- Price and Booking Section -->
       <aside class="sticky-card">
         <div class="price-row">
           <div>
@@ -96,6 +97,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -150,6 +152,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -265,6 +268,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -326,6 +330,7 @@
   <script src="../script.js"></script>
 
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
