--- a/Home Page/Destinations/Packages/ex/NZ5.html
+++ b/Home Page/Destinations/Packages/ex/NZ5.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -45,7 +46,7 @@
 
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="https://www.geoex.com/app/uploads/2019/10/new-zealand-south-island-mount-sefton.jpg"
@@ -61,7 +62,7 @@
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>5 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>4 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Auckland • Rotorua • Lake Taupo</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Nov – Mar</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Nov - Mar</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -93,7 +94,7 @@
     </div>
   </section>
 
-  <!-- ✅ Added Highlights Section -->
+  <!--  Added Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -122,8 +123,9 @@
       </article>
     </div>
   </section>
-  <!-- ✅ End Highlights -->
+  <!--  End Highlights -->
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -207,6 +209,7 @@
     </div>
   </section>
 
+  <!-- End Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -241,7 +244,8 @@
       </article>
     </div>
   </section>
-
+  
+  <!-- Inclusion/Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -266,6 +270,7 @@
   <script src="../script.js"></script>
 
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
