--- a/Home Page/Destinations/Packages/ex/UK3.html
+++ b/Home Page/Destinations/Packages/ex/UK3.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -45,7 +46,7 @@
 
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/14/10/2f/fe/united-kingdom.jpg?w=1200&h=700&s=1"
@@ -62,7 +63,7 @@
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>3 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>2 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>London • Edinburgh</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Apr – Sep</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Apr - Sep</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -94,6 +95,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -116,6 +118,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -167,6 +170,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -193,6 +197,7 @@
     </div>
   </section>
 
+  <!-- Inclusion/Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -217,6 +222,7 @@
   <script src="../script.js"></script>
 
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
