--- a/Home Page/Destinations/Packages/ex/UK7.html
+++ b/Home Page/Destinations/Packages/ex/UK7.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -44,7 +44,7 @@
   <script src="../../../main.js"></script>
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/14/10/2f/fe/united-kingdom.jpg?w=1200&h=700&s=1"
@@ -60,7 +60,7 @@
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>7 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>6 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>London • Edinburgh • Bath • Lake District</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Apr – Sep</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Apr - Sep</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -92,6 +92,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -130,6 +131,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -245,6 +247,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -291,6 +294,7 @@
     </div>
   </section>
 
+  <!-- Inclusion/Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -315,7 +319,7 @@
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
   <script src="../script.js"></script>
 
-
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
