--- a/Home Page/Destinations/Packages/ex/aussie3.html
+++ b/Home Page/Destinations/Packages/ex/aussie3.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Phanthom Global - Australia Explorer (3 Days / 2 Nights)</title>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@400;600&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
   <link rel="icon" href="../../../New folder/Favicon (2).png" type="image/png">
   <link rel="stylesheet" href="../styles.css" />
@@ -16,6 +14,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -44,6 +43,7 @@
 
 
 
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="./photo-1523482580672-f109ba8cb9be.jpeg" alt="Sydney Opera House">
@@ -59,7 +59,7 @@
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>3 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>2 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Sydney • Blue Mountains</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep – Mar</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep - Mar</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -71,6 +71,7 @@
       </div>
 
 
+      <!-- Price and Booking Section -->
       <aside class="sticky-card">
         <div class="price-row">
           <div>
@@ -92,6 +93,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -130,6 +132,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -179,6 +182,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -238,6 +242,8 @@
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
   <script src="../script.js"></script>
 
+
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
