--- a/Home Page/Destinations/Packages/ex/aussie7.html
+++ b/Home Page/Destinations/Packages/ex/aussie7.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -44,7 +45,7 @@
   <script src="../../../main.js"></script>
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="./photo-1523482580672-f109ba8cb9be.jpeg" alt="Sydney Opera House">
@@ -56,13 +57,15 @@
       <p class="subtitle">Discover Australia's iconic sights, coastal gems, Blue Mountains, and wildlife adventures in a
         full 7-day experience.</p>
 
+      <!-- Facts Section -->
       <div class="facts">
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>7 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>6 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Sydney • Blue Mountains • Coast • Wildlife</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep – Mar</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep - Mar</span></div>
       </div>
 
+      <!-- Price and Booking Section -->
       <div class="cta-wrap">
         <a href="../applyForm/Applynow1.html">
           <button class="btn primary" id="enquireBtn">
@@ -92,6 +95,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -131,6 +135,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -240,6 +245,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -277,6 +283,7 @@
     </div>
   </section>
 
+  <!-- Inclusion/Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -301,6 +308,8 @@
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
   <script src="../script.js"></script>
 
+
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
