--- a/Home Page/FAQ/index.html
+++ b/Home Page/FAQ/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+  <!--Navigation bar-->
   <header>
     <a href="../main.html" class="brand">
 
@@ -41,6 +42,7 @@
   <link rel="stylesheet" href="../main.css">
   <script src="../main.js"></script>
 
+  <!-- Banner Section -->
   <div class="banner">
     <img src="./adventure.jpeg" alt="Phanthom Global Travel Banner">
   </div>
@@ -73,7 +75,6 @@
 
     <section class="faq-list" id="faqList" aria-live="polite">
 
-      <!-- Example FAQ items -->
       <!-- FAQ items -->
       <article class="faq" data-tags="booking payment refund" id="f1"> <button class="trigger" aria-expanded="false"
           aria-controls="a1"> <span>
@@ -189,7 +190,6 @@
         </div>
       </article>
 
-      <!-- Add rest of FAQs here (same as your original code) -->
 
     </section>
 
@@ -200,6 +200,7 @@
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
