--- a/Home Page/PlanYourTrip/index.html
+++ b/Home Page/PlanYourTrip/index.html
@@ -14,6 +14,7 @@
 
 <body>
 
+  <!-- NAVIGATION BAR -->
   <header>
     <a href="../main.html" class="brand">
 
@@ -40,6 +41,7 @@
   <link rel="stylesheet" href="../main.css">
   <script src="../main.js"></script>
 
+  <!-- HERO SECTION -->
   <section class="hero">
     <div class="hero-inner">
       <h1>Plan Your Trip</h1>
@@ -171,8 +173,8 @@
             <select id="budgetRange" name="budgetRange">
               <option value="">Select budget range</option>
               <option value="under1500">Under $1,500</option>
-              <option value="1500-3000">$1,500 – $3,000</option>
-              <option value="3000-5000">$3,000 – $5,000</option>
+              <option value="1500-3000">$1,500 - $3,000</option>
+              <option value="3000-5000">$3,000 - $5,000</option>
               <option value="5000plus">Above $5,000</option>
             </select>
             <label for="budgetRange">Estimated budget</label>
@@ -354,6 +356,7 @@
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
+  <!-- FOOTER SECTION -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
