--- a/Home Page/PrivacyPolicy/index.html
+++ b/Home Page/PrivacyPolicy/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+  <!-- NAVIGATION BAR -->
   <header>
     <a href="../main.html" class="brand">
 
@@ -41,6 +42,7 @@
   <link rel="stylesheet" href="../main.css">
   <script src="../main.js"></script>
 
+  <!-- BANNER SECTION -->
   <main class="container" role="main">
     <div class="banner">
       <img src="./adventure.jpeg" alt="Phanthom Global Travel Banner">
@@ -60,11 +62,13 @@
     <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
+    <!-- PRIVACY POLICY CONTENT -->
     <section class="section">
       <p>Welcome to <strong>Phanthom Global</strong>. This Privacy Policy explains how we collect, use, disclose, and
         protect information when you visit or make bookings through our website.</p>
     </section>
 
+    <!-- INFORMATION WE COLLECT SECTION -->
     <section class="section">
       <h2>Information We Collect</h2>
       <ul>
@@ -78,6 +82,7 @@
       </ul>
     </section>
 
+    <!-- HOW WE USE YOUR INFORMATION SECTION -->
     <section class="section">
       <h2>How We Use Your Information</h2>
       <ul>
@@ -88,6 +93,7 @@
       </ul>
     </section>
 
+    <!-- COOKIES & TRACKING SECTION -->
     <section class="section">
       <h2>Cookies &amp; Tracking</h2>
       <p>We and our partners use cookies and similar technologies to remember your preferences, analyze site traffic,
@@ -101,6 +107,7 @@
       </p>
     </section>
 
+    <!-- ADDITIONAL POLICY DETAILS SECTION -->
     <section class="section accordion" aria-label="Policy details">
       <div class="acc-item">
         <div class="acc-head" tabindex="0" data-target="whoWeShare">
@@ -172,6 +179,7 @@
   </main>
 
 
+  <!-- FOOTER SECTION -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
