--- a/Home Page/Termsandcondition/terms.html
+++ b/Home Page/Termsandcondition/terms.html
@@ -21,6 +21,7 @@
 
 <body>
 
+    <!-- NAVIGATION BAR -->
     <header>
         <a href="../main.html" class="brand">
 
@@ -52,6 +53,7 @@
         <img src="./adventure.jpeg" alt="Phanthom Global Travel Banner">
     </div>
 
+    <!-- TERMS AND CONDITIONS CONTENT -->
     <div class="termsAndConditions fadeIn">
         <h1 class="termsAndConditionsHeading">Terms Of Service</h1>
         <h2 class="spangleWelcome">Welcome to Phanthom Global</h2>
@@ -225,6 +227,8 @@
     <script src="https://elfsightcdn.com/platform.js" async></script>
     <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
+
+    <!-- FOOTER SECTION -->
     <footer class="site-footer">
         <div class="footer-top">
             <div class="logo">
@@ -311,6 +315,7 @@
 
     <script src="../main.js"></script>
     <script>
+        // Hide/Show Navigation on Scroll
         document.addEventListener('DOMContentLoaded', function () {
             let lastScroll = 0;
             const header = document.querySelector('header');
