--- a/Home Page/main.html
+++ b/Home Page/main.html
@@ -14,11 +14,13 @@
 </head>
 
 <body>
+  
+  <!-- Navigation Bar -->
   <header>
     <a href="#" class="brand">
 
       <img src="./New folder/logo2.png" alt="Phanthom Global Logo" class="brand-logo">
-      hanthom Global
+      Phanthom Global
     </a>
 
     <div class="menu-btn">
@@ -37,7 +39,7 @@
     </div>
   </header>
 
-
+  <!-- Home Video Section -->
   <section class="home">
     <video class="video-slide active" src="New folder/ausi454.mp4" autoplay muted loop></video>
     <video class="video-slide" src="New folder/londgon445.mp4" autoplay muted loop></video>
@@ -51,6 +53,7 @@
       </svg>
     </div>
 
+    <!-- Content for Australia -->
     <div class="content active">
       <h1>AUSTRALIA<br /><span>|Aussie</span></h1>
       <p>Australia offers diverse experiences for every traveler from the iconic Sydney Opera House and stunning Great
@@ -59,6 +62,7 @@
       <a href="./Countries/Amadaaustrailia.html" class="read-more">Read More</a>
     </div>
 
+    <!-- Content for United Kingdom -->
     <div class="content">
       <h1>UNITED KINGDOM<br /><span>|Britain</span></h1>
       <p>The UK blends rich history with modern charm explore iconic landmarks like Big Ben, ancient castles, scenic
@@ -67,6 +71,7 @@
       <a href="./Countries/Amada'sUK.html" class="read-more">Read More</a>
     </div>
 
+    <!-- Content for Switzerland -->
     <div class="content">
       <h1>SWITZERLAND<br /><span>|Swiss</span></h1>
       <p>Switzerland enchants travelers with its breathtaking Alpine scenery, pristine lakes, and charming villages.
@@ -75,6 +80,7 @@
       <a href="./Countries/Amadaswitzerland.html" class="read-more">Read More</a>
     </div>
 
+    <!-- Content for New Zealand -->
     <div class="content">
       <h1>NEW ZEALAND<br /><span>|KiwiLand</span></h1>
       <p>a beautiful island country in the southwestern Pacific Ocean, known for its stunning natural landscapes, from
@@ -83,6 +89,7 @@
       <a href="./Countries/AmadaNewZealand.html" class="read-more">Read More</a>
     </div>
 
+    <!-- Content for Canada -->
     <div class="content">
       <h1>CANADA<br /><span>|The Great White North</span></h1>
       <P>Canada offers stunning natural beauty, vibrant cities, and diverse cultural experiences. From majestic
@@ -93,6 +100,7 @@
       <a href="./Countries/AmadaCanada.html" class="read-more">Read More</a>
     </div>
 
+    <!-- Slider Navigation -->
     <div class="slider-navigation">
       <div class="nav-btn active"></div>
       <div class="nav-btn"></div>
@@ -102,26 +110,30 @@
     </div>
   </section>
 
-
+  <!-- Services Section -->
   <section class="serve-section">
+    <!-- Service Card: Discover the possibilities -->
     <div class="serve-card">
       <img src="./New folder/icon1.PNG" alt="Discover">
       <h3>Discover the possibilities</h3>
       <p>With nearly half a million attraction, hotels & more. You're sure to find joy</p>
     </div>
 
+    <!-- Service Card: Enjoy deals & delights -->
     <div class="serve-card">
       <img src="./New folder/icon2.PNG" alt="Deals">
       <h3>Enjoy deals & delights</h3>
       <p>Quality activities. Great prices, plus earn credits to savemore</p>
     </div>
 
+    <!-- Service Card: Exploring made easy -->
     <div class="serve-card">
       <img src="./New folder/icon3.PNG" alt="Explore">
       <h3>Exploring made easy</h3>
       <p>Book last minute, skip lines & get free cancellation for easier exploring</p>
     </div>
 
+    <!-- Service Card: Travel you can trust -->
     <div class="serve-card">
       <img src="./New folder/icon4.PNG" alt="Trust">
       <h3>Travel you can trust</h3>
@@ -130,45 +142,53 @@
   </section>
 
 
-
+  <!-- Categories Section -->
   <section class="gallery">
 
+    <!-- Category: Sun and Beach -->
     <a href="./Categories/SunandBeach/index.html" class="item wildlife">
       <img src="./New folder/beach.jpg" alt="beach">
       <div class="overlay">SUN AND BEACH</div>
     </a>
 
+    <!-- Category: Wildlife and Safari -->
     <a href="./Categories/WildLife/index.html" class="item wildlife">
       <img src="./New folder/wildlife2.jpg" alt="Wildlife and Safari">
       <div class="overlay">WILDLIFE AND SAFARI</div>
     </a>
-
+    
+    <!-- Category: Text Block -->
     <div class="item text-block">
       <h3>TRULY</h3>
       <h2>Wonderful Things to Explore</h2>
       <a href="./Categories/Findoutmore/index.html">Find Out More</a>
     </div>
 
+    <!-- Category: Nightlife -->
     <a href="./Categories/Nightlife/index.html" class="item nightlife">
       <img src="./New folder/night.jpg" alt="Nightlife">
       <div class="overlay">NIGHTLIFE</div>
     </a>
 
+    <!-- Category: Heritage and Culture -->
     <a href="./Categories/Culture/index.html" class="item heritage">
       <img src="./New folder/culture.jpg" alt="Heritage and Culture">
       <div class="overlay">HERITAGE AND CULTURE</div>
     </a>
 
+    <!-- Category: Shopping -->
     <a href="./Categories/shopping/index.html" class="item shopping">
       <img src="./New folder/shopping.avif" alt="Shopping">
       <div class="overlay">SHOPPING</div>
     </a>
 
+    <!-- Category: Adventure -->
     <a href="./Categories/Adventure/index.html" class="item adventure">
       <img src="./New folder/adventure.jpeg" alt="Adventure">
       <div class="overlay">ADVENTURE</div>
     </a>
 
+    <!-- Category: Sightseeing -->
     <a href="./Categories/sightseeing/index.html" class="item adventure">
       <img src="./New folder/sight2.jpg" alt="Sightseeing">
       <div class="overlay">SIGHTSEEING </div>
@@ -176,7 +196,7 @@
 
   </section>
 
-
+  <!-- Map Section -->
   <section>
     <div class="map">
       <h1>Destinations</h1>
@@ -220,11 +240,12 @@
   </section>
 
 
-
+  <!-- Popular Destination Section -->
   <section class="destination-section" id="destination-section">
     <h1 class="destination-title">Popular Destinations</h1>
     <p class="destination-para">Explore our curated list of must-visit destinations around the globe.</p>
 
+    <!-- Tours Container -->
     <div class="tours-container">
       <div class="tour-card">
         <img class="tour-img" src="./New folder/p1.jpg" alt="Milford Sound">
@@ -278,10 +299,11 @@
 
 
 
-  <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+  <!-- Elfsight WhatsApp Chat  -->
   <script src="https://elfsightcdn.com/platform.js" async></script>
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
