--- a/Home Page/AboutUsPage/Aboutus/index.html
+++ b/Home Page/AboutUsPage/Aboutus/index.html
@@ -306,6 +306,7 @@
 </head>
 
 <body>
+  <!-- Header -->
   <header>
     <a href="../../main.html" class="brand">
 
@@ -410,7 +411,6 @@
     // Footer Accordion Toggle for Mobile
     document.addEventListener('DOMContentLoaded', function () {
 
-      // Only run on mobile screens
       function initFooterAccordion() {
         if (window.innerWidth <= 768) {
           const footerLists = document.querySelectorAll('.footer-nav ul');
@@ -419,11 +419,9 @@
             const firstItem = ul.querySelector('li:first-child');
 
             if (firstItem) {
-              // Remove any existing click listeners
               firstItem.replaceWith(firstItem.cloneNode(true));
               const newFirstItem = ul.querySelector('li:first-child');
 
-              // Add click event
               newFirstItem.addEventListener('click', function (e) {
                 e.preventDefault();
                 ul.classList.toggle('active');
@@ -433,10 +431,8 @@
         }
       }
 
-      // Initialize on load
       initFooterAccordion();
 
-      // Re-initialize on window resize
       let resizeTimer;
       window.addEventListener('resize', function () {
         clearTimeout(resizeTimer);
@@ -447,7 +443,7 @@
     });
   </script>
 
-
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
