--- a/Home Page/AboutUsPage/index.html
+++ b/Home Page/AboutUsPage/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!-- Navigation Bar -->
   <header>
     <a href="../main.html" class="brand">
       <img src="../New folder/logo2.png" alt="Phanthom Global Logo" class="brand-logo">
@@ -29,10 +30,11 @@
         <a href="../AboutUsPage/index.html">About Us</a>
         <a href="../Destinations/index.html">Destinations</a>
         <a href="../ContactUs/contactus1.html">Contact Us</a>
-        <a href="../Termsandcondition/terms.html">Plan Your Trip</a>
+        <a href="../PlanYourTrip/index.html">Plan Your Trip</a>
       </div>
     </div>
   </header>
+  
   <link rel="stylesheet" href="../main.css">
   <script src="../main.js"></script>
 
