--- a/Home Page/AboutUsPage/trust us/index.html
+++ b/Home Page/AboutUsPage/trust us/index.html
@@ -308,6 +308,7 @@
 
 <body>
   <header>
+    <!--  Navigation Bar -->
     <a href="../../main.html" class="brand">
 
       <img src="../../New folder/logo2.png" alt="Phanthom Global Logo" class="brand-logo">
@@ -342,7 +343,7 @@
   <div class="section">
     <h2>Why Choose Phantom Global?</h2>
     <p>We understand that trust is the foundation of every journey. At Phantom Global, we pride ourselves on delivering
-      transparent, reliable, and high-quality services. Here’s why thousands of travelers trust us with their adventures
+      transparent, reliable, and high-quality services. Here's why thousands of travelers trust us with their adventures
       around the globe.</p>
   </div>
 
@@ -380,11 +381,12 @@
     </div>
   </div>
 
-  <!-- Elfsight WhatsApp Chat | Untitled WhatsApp Chat -->
+  <!-- Elfsight WhatsApp Chat -->
   <script src="https://elfsightcdn.com/platform.js" async></script>
   <div class="elfsight-app-8f39d8b6-7fdf-456a-b652-69dc7cf56e48" data-elfsight-app-lazy></div>
 
 
+  <!-- Footer -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
@@ -468,6 +470,7 @@
   </footer>
 
   <script>
+    // Hide/Show Navigation on Scroll
     document.addEventListener('DOMContentLoaded', function () {
       let lastScroll = 0;
       const header = document.querySelector('header');
@@ -494,7 +497,6 @@
     // Footer Accordion Toggle for Mobile
     document.addEventListener('DOMContentLoaded', function () {
 
-      // Only run on mobile screens
       function initFooterAccordion() {
         if (window.innerWidth <= 768) {
           const footerLists = document.querySelectorAll('.footer-nav ul');
@@ -503,11 +505,9 @@
             const firstItem = ul.querySelector('li:first-child');
 
             if (firstItem) {
-              // Remove any existing click listeners
               firstItem.replaceWith(firstItem.cloneNode(true));
               const newFirstItem = ul.querySelector('li:first-child');
 
-              // Add click event
               newFirstItem.addEventListener('click', function (e) {
                 e.preventDefault();
                 ul.classList.toggle('active');
@@ -517,10 +517,8 @@
         }
       }
 
-      // Initialize on load
       initFooterAccordion();
 
-      // Re-initialize on window resize
       let resizeTimer;
       window.addEventListener('resize', function () {
         clearTimeout(resizeTimer);
