--- a/Home Page/Destinations/Packages/ex/Canada5.html
+++ b/Home Page/Destinations/Packages/ex/Canada5.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -45,7 +46,7 @@
 
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img
@@ -56,14 +57,14 @@
     <div class="hero-content container">
       <span class="chip"><i class="ri-sparkling-2-line"></i> Featured Package</span>
       <h1 class="title">CANADA — 5 Days / 4 Nights</h1>
-      <p class="subtitle">Explore Canada’s vibrant cities and stunning landscapes — Toronto, Niagara Falls, Ottawa, and
+      <p class="subtitle">Explore Canada's vibrant cities and stunning landscapes — Toronto, Niagara Falls, Ottawa, and
         Quebec City.</p>
 
       <div class="facts">
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>5 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>4 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Toronto • Niagara Falls • Ottawa • Quebec</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: May – Sep</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: May - Sep</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -74,6 +75,7 @@
         </a>
       </div>
 
+      <!-- Price and Booking Section -->
       <aside class="sticky-card">
         <div class="price-row">
           <div>
@@ -95,6 +97,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -136,6 +139,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -219,6 +223,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -254,6 +259,7 @@
     </div>
   </section>
 
+  <!-- Inclusion & Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -278,6 +284,7 @@
   <script src="../script.js"></script>
 
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
