--- a/Home Page/Destinations/Packages/ex/NZ3.html
+++ b/Home Page/Destinations/Packages/ex/NZ3.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -44,7 +45,7 @@
   <script src="../../../main.js"></script>
 
 
-
+  <!-- Hero Section -->
 
   <section class="hero">
     <div class="hero-media">
@@ -61,7 +62,7 @@
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>3 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>2 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Auckland • Rotorua</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Nov – Mar</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Nov - Mar</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -72,6 +73,7 @@
         </a>
       </div>
 
+      <!-- Price and Booking Section -->
       <aside class="sticky-card">
         <div class="price-row">
           <div>
@@ -93,6 +95,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -124,6 +127,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -173,6 +177,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -198,6 +203,7 @@
     </div>
   </section>
 
+  <!-- Inclusion/Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -222,7 +228,7 @@
   <script src="../script.js"></script>
 
 
-
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
