--- a/Home Page/Destinations/Packages/ex/NZ7.html
+++ b/Home Page/Destinations/Packages/ex/NZ7.html
@@ -17,7 +17,7 @@
 
 <body>
 
-
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -45,7 +45,7 @@
   <script src="../../../main.js"></script>
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="https://www.geoex.com/app/uploads/2019/10/new-zealand-south-island-mount-sefton.jpg"
@@ -62,7 +62,7 @@
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>7 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>6 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Auckland • Rotorua • Taupo • Queenstown</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Nov – Mar</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Nov - Mar</span></div>
       </div>
 
       <div class="cta-wrap">
@@ -94,6 +94,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -125,6 +126,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -240,6 +242,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -276,6 +279,7 @@
     </div>
   </section>
 
+  <!-- Inclusion/Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -300,6 +304,7 @@
   <script src="../script.js"></script>
 
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
