--- a/Home Page/Destinations/Packages/ex/UK5.html
+++ b/Home Page/Destinations/Packages/ex/UK5.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -45,7 +46,7 @@
 
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/14/10/2f/fe/united-kingdom.jpg?w=1200&h=700&s=1"
@@ -61,9 +62,10 @@
         <div class="fact"><i class="ri-sun-foggy-line"></i><span>5 Days</span></div>
         <div class="fact"><i class="ri-moon-clear-line"></i><span>4 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>London • Edinburgh • Bath</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Apr – Sep</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Apr - Sep</span></div>
       </div>
 
+      <!-- Call to Action Section -->
       <div class="cta-wrap">
         <a href="../applyForm/Applynow1.html">
           <button class="btn primary" id="enquireBtn">
@@ -93,6 +95,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -124,6 +127,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -207,6 +211,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -243,6 +248,7 @@
     </div>
   </section>
 
+  <!-- Inclusion/Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -267,7 +273,7 @@
   <script src="../script.js"></script>
 
 
-
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
