--- a/Home Page/Destinations/Packages/ex/aussie5.html
+++ b/Home Page/Destinations/Packages/ex/aussie5.html
@@ -17,6 +17,7 @@
 
 <body>
 
+  <!-- Navigation Bar -->
   <header>
     <a href="../../../main.html" class="brand">
 
@@ -44,7 +45,7 @@
   <script src="../../../main.js"></script>
 
 
-
+  <!-- Hero Section -->
   <section class="hero">
     <div class="hero-media">
       <img src="./photo-1523482580672-f109ba8cb9be.jpeg" alt="Australia Beach">
@@ -61,9 +62,10 @@
         <div class="fact"><i class="ri-moon-clear-line"></i><span>4 Nights</span></div>
         <div class="fact"><i class="ri-map-pin-2-line"></i><span>Sydney • Blue Mountains • Great Ocean Road •
             Melbourne</span></div>
-        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep – Apr</span></div>
+        <div class="fact"><i class="ri-calendar-check-line"></i><span>Best: Sep - Apr</span></div>
       </div>
 
+      <!-- Price and Booking Section -->
       <div class="cta-wrap">
         <a href="../applyForm/Applynow1.html">
           <button class="btn primary" id="enquireBtn">
@@ -93,6 +95,7 @@
     </div>
   </section>
 
+  <!-- Highlights Section -->
   <section class="container section">
     <h2 class="section-title">Highlights</h2>
     <div class="highlights">
@@ -132,6 +135,7 @@
     </div>
   </section>
 
+  <!-- Itinerary Section -->
   <section class="container section">
     <h2 class="section-title">Day-by-Day Itinerary</h2>
     <div class="timeline">
@@ -217,6 +221,7 @@
     </div>
   </section>
 
+  <!-- Hotels Section -->
   <section class="container section">
     <h2 class="section-title">Handpicked Hotels</h2>
     <div class="hotel-slider" id="hotelSlider">
@@ -255,6 +260,7 @@
     </div>
   </section>
 
+  <!-- Inclusion Exclusion Section -->
   <section class="container section grid-2">
     <div>
       <h2 class="section-title">Included</h2>
@@ -279,6 +285,7 @@
   <script src="../script.js"></script>
 
 
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
