--- a/Home Page/Destinations/index.html
+++ b/Home Page/Destinations/index.html
@@ -15,6 +15,7 @@
 
 <body>
 
+  <!--Navigation Bar-->
   <header>
     <a href="../main.html" class="brand">
 
@@ -41,6 +42,7 @@
   <link rel="stylesheet" href="../main.css">
   <script src="../main.js"></script>
 
+  <!-- Hero Section -->
   <section class="hero">
     <div class="overlay">
       <div class="hero-text">
@@ -75,6 +77,7 @@
     </div>
   </section>
 
+  <!-- Choose Us Section -->
   <section class="section__container choose__container" id="about">
     <div class="choose__image">
       <img src="assets/choose.jpg" alt="choose" />
@@ -117,6 +120,7 @@
     </div>
   </section>
 
+  <!-- Popular Destinations Section -->
   <section class="section__container popular__container" id="package-Australia">
     <img src="assets/bg.png" alt="bg" class="popular__bg" />
     <p class="section__subheader">Populer Destinations </p>
@@ -195,8 +199,9 @@
             </div>
           </div>
         </div>
-
   </section>
+
+  <!-- Popular Destinations Section -->
   <section class="section__container popular__container" id="package-New Zealand">
     <img src="assets/bg.png" alt="bg" class="popular__bg" />
     <p class="section__subheader">Populer Destinations In</p>
@@ -277,6 +282,8 @@
         </div>
 
   </section>
+
+
   <section class="section__container popular__container" id="package-United Kingdom">
     <img src="assets/bg.png" alt="bg" class="popular__bg" />
     <p class="section__subheader">Popular Destinations In</p>
@@ -356,6 +363,9 @@
         </div>
 
   </section>
+
+
+  <!-- Popular Destinations Section -->
   <section class="section__container popular__container" id="package-Canada">
     <img src="assets/bg.png" alt="bg" class="popular__bg" />
     <p class="section__subheader">Populer Destinations In</p>
@@ -439,6 +449,9 @@
         </div>
 
   </section>
+
+
+
   <section class="section__container popular__container" id="package-Switzerland">
     <img src="assets/bg.png" alt="bg" class="popular__bg" />
     <p class="section__subheader">Popular Destinations In</p>
@@ -520,6 +533,8 @@
 
   </section>
 
+  <!-- Client Testimonials Section -->
+
   <section class="section__container client__container">
     <img src="assets/bg.png" alt="bg" class="client__bg" />
     <p class="section__subheader">What Our Client Say's?</p>
@@ -599,6 +614,8 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+
+  <!-- Footer Section -->
   <footer class="site-footer">
     <div class="footer-top">
       <div class="logo">
